# terminology_service

./: .env.template  Dockerfile  README.md  docker-compose.yml  pyproject.toml
nginx/: default.conf
src/: manage.py
src/refbooks/: admin.py  decorators.py  descriptions.py  exceptions.py  methods.py  models.py  openapi_settings.py  serializers.py  urls.py  views.py
src/refbooks/fixtures/: data.json
src/refbooks/migrations/: 0001_initial.py  0002_alter_refbook_options_alter_element_version_and_more.py
src/refbooks/tests/: test_data.py  test_refbooks.py
src/src/: converters.py  settings.py  urls.py
